...
    case dumbbell
    case cable
    case machine

    public var displayName: String {
        switch self {
        case .barbell:   return localized("Barbell")
        case .dumbbell:  return localized("Dumbbell")
        case .cable:     return localized("Cable")
        case .machine:   return localized("Machine")
        }
    }

...
